--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "url": "git+https://github.com/BloomInstituteOfTechnology/web-sprint-challenge-build-a-web-api"
     },
     "dependencies": {
-        "express": "4.17.1",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
         "helmet": "4.6.0",
         "knex": "0.95.11",
         "sqlite3": "5.0.2"
@@ -21,6 +22,7 @@
     "devDependencies": {
         "cross-env": "7.0.3",
         "eslint": "8.0.1",
+        "eslint-plugin-react": "^7.27.1",
         "jest": "27.3.1",
         "knex-cleaner": "1.3.1",
         "supertest": "6.1.6"
